--- a/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/17. 기타 서비스 다루기.ipynb
+++ b/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/17. 기타 서비스 다루기.ipynb
@@ -436,6 +436,627 @@
    "source": [
     "## 106 그래픽 사용자 인터페이스를 만들려면? ― tkinter"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 107 작성한 코드를 테스트하려면? ― unittest\n",
+    "# unittest는 작성한 코드를 단위 테스트할 때 사용하는 모듈이다.\n",
+    "\n",
+    "# 문제\n",
+    "# 연도를 입력으로 받아 윤년인지 아닌지를 확인하는 leap_year() 함수를 만들되 unittest 모듈을 사용하여 테스트 주도 개발(Test Driven Development, TDD) 방식으로 만들려면 어떻게 해야 할까?\n",
+    "\n",
+    "# 파이썬은 윤년인지를 확인하는 calendar.isleap() 함수를 이미 제공한다. 하지만, unittest와 TDD 사용법을 숙지하고자 직접 만들기로 한다.\n",
+    "\n",
+    "# 풀이\n",
+    "# 윤년 확인 함수를 만들기 전에 TDD와 unittest 모듈에 대해서 먼저 간단히 알아보자.\n",
+    "\n",
+    "# TDD\n",
+    "# 일반적으로 테스트는 프로그램 개발이 끝난 후에 진행한다. 하지만, TDD는 테스트 코드부터 먼저 작성하고 그 테스트 코드를 통과하는 실제 코드를 나중에 만든다.\n",
+    "\n",
+    "# 건물을 지을 때 벽돌을 쌓는 방법을 떠올려보자. 벽돌을 쌓을 때는 벽돌을 얼마만큼 쌓을 건지 특정 영역에 실로 표시를 해 놓고 벽돌을 쌓다가 그 높이까지 쌓으면 이를 중지한다.\n",
+    "\n",
+    "# TDD로 비유하면 공간에 실로 영역을 표시하는 것을 '테스트 코드'에, 벽돌을 쌓는 것은 '실제 코드'에 비유할 수 있다. 벽돌을 쌓을 때 비뚤어지는지 정확히 쌓이는지는 실로 판단할 수 있는 것과 마찬가지로, 테스트 코드는 실제 코드가 나아가야 할 방향을 알려준다. 만약 벽돌을 조금 비뚤어지게 쌓았다면 반듯하게 다시 잡아가게 되는데 이를 '리팩토링'에 비유할 수 있다.\n",
+    "\n",
+    "# 리팩토링(refactoring)은 소스 코드의 기능은 유지한 채로 소스 코드의 디자인을 개선하는 방법이다.\n",
+    "\n",
+    "# TDD에 절대적인 방법이 있는 것은 아니지만 일반적인 흐름은 있다. 그 흐름은 다음과 같다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 1. 구현해야 할 내용을 정의한다. (Need)\n",
+    "# 2. 실패하는 테스트를 작성한다. (Test)\n",
+    "# 3. 테스트를 통과하는 코드를 작성한다. (Code)\n",
+    "# 4. 코드를 리팩토링한다. (Refactoring)\n",
+    "# 5. 구현해야 할 내용을 모두 끝낼 때까지 위의 작업을 반복한다.\n",
+    "# Simple Code는 TDD의 궁극적인 목표이다. 켄트 벡(Kent Beck), 워드 커닝험(Ward Cunningham)과 함께 익스트림 프로그래밍(Extreme Programming)의 아버지라 불리는 론 제프리즈(Ron Jeffries)는 Simple Code를 다음과 같이 표현하였다.\n",
+    "\n",
+    "# Clean code that works! (작동하는 깨끗한 코드!)\n",
+    "\n",
+    "# Simple Code는 코드가 단순하다는 의미가 아니라 중복이 없고 누가 봐도 명확한 코드를 말한다. 가끔 프로젝트를 하다 보면 정말 뛰어난 프로그래머를 보게 된다. \"오, 이것을 이렇게 간단하고 이해하기 쉽게 표현하다니!\"라는 감탄사와 함께 말이다. 직관력이 뛰어난 프로그래머는 복잡하게 할 것을 아주 간단하게 만드는 능력이 있다. 하지만, TDD를 이용하면 특별한 능력 없이도 자연스럽게 가장 간명한 코드를 만들 수 있다. 직관력, 또는 갑자기 떠오르는 아이디어가 프로그램을 훌륭하게 만들 수는 있지만, 항상 그러리란 보장은 없다. 그러므로 TDD는 이를 추구하는 가장 현실적인 방법이다.\n",
+    "\n",
+    "# unittest\n",
+    "# 파이썬 unittest 프레임워크의 기본 골격은 다음과 같다.\n",
+    "\n",
+    "# import unittest\n",
+    "\n",
+    "\n",
+    "# # 실제코드\n",
+    "# def leap_year(year):\n",
+    "#     pass\n",
+    "\n",
+    "\n",
+    "# # 테스트코드\n",
+    "# class LeapYearTest(unittest.TestCase):\n",
+    "#     def test_leap_year(self):\n",
+    "#         pass\n",
+    "\n",
+    "\n",
+    "# # 테스트를 진행\n",
+    "# if __name__ == '__main__':\n",
+    "#     unittest.main()\n",
+    "\n",
+    "# unittest 모듈을 사용할 때 알아야 할 규칙은 다음과 같다.\n",
+    "\n",
+    "# 테스트 코드는 이처럼 unittest의 TestCase라는 클래스를 상속하여 작성한다.\n",
+    "# 이 샘플 코드의 test_leap_year() 메서드처럼 test~로 시작하는 메서드는 자동으로 실행된다.\n",
+    "# 앞으로 테스트 코드를 작성하고자 unittest.TestCase에 있는 assertFalse(), assertTrue(), assertEquals()라는 세 개의 메서드를 이용할 것이다. 각각의 사용법은 다음과 같다.\n",
+    "\n",
+    "# assertTrue(a): a가 참인지 조사한다.\n",
+    "# assertFalse(a): a가 거짓인지를 조사한다.\n",
+    "# assertEqual(a, b): a와 b가 같은지를 조사한다.\n",
+    "# TDD로 윤년체크 함수 작성하기\n",
+    "# 먼저 다음과 같은 테스트 코드로 시작해 보자.\n",
+    "\n",
+    "# [파일명: tdd_sample.py]\n",
+    "\n",
+    "# import unittest\n",
+    "\n",
+    "\n",
+    "# def leap_year(year):\n",
+    "#     pass\n",
+    "\n",
+    "\n",
+    "# class LeapYearTest(unittest.TestCase):\n",
+    "#     def test_leap_year(self):\n",
+    "#         self.assertTrue(leap_year(0))\n",
+    "\n",
+    "\n",
+    "# if __name__ == '__main__':\n",
+    "#     unittest.main()\n",
+    "\n",
+    "# test_leap_year() 함수에 self.assertTrue(leap_year(0))라는 문장을 추가했다. 이 테스트 코드는 0년은 윤년이어야 한다는 뜻이다.\n",
+    "\n",
+    "# 4로 나누어떨어지는 연도가 윤년이라는 것은 상식적으로 안다. 따라서 0년은 4로 나눈 값이 0이므로 윤년이어야 한다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting tdd_sample.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile tdd_sample.py\n",
+    "import unittest\n",
+    "\n",
+    "def leap_year(year):\n",
+    "    pass\n",
+    "\n",
+    "class LeapYearTest(unittest.TestCase):\n",
+    "    def test_leap_year(self):\n",
+    "        self.assertTrue(leap_year(0))\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 이제 이 코드를 실행하면 다음과 같은 결과가 출력된다.\n",
+    "\n",
+    "# c:\\projects\\pylib>python tdd_sample.py\n",
+    "# F\n",
+    "# ======================================================================\n",
+    "# FAIL: test_leap_year (__main__.LeapYearTest)\n",
+    "# ----------------------------------------------------------------------\n",
+    "# Traceback (most recent call last):\n",
+    "#   File \"c:\\projects\\pylib\\tdd_sample.py\", line 10, in test_leap_year\n",
+    "#     self.assertTrue(leap_year(0))\n",
+    "# AssertionError: None is not true\n",
+    "\n",
+    "# ----------------------------------------------------------------------\n",
+    "# Ran 1 test in 0.001s\n",
+    "\n",
+    "# FAILED (failures=1)\n",
+    "\n",
+    "# leap_year(0) 의 반환값이 True가 아닌 None이므로 오류가 발생한 것이다. 왜냐하면 leap_year() 함수는 현재 아무런 구현없이 pass만 있는 함수이기 때문이다. 오류를 해결하려면 이 함수를 다음과 같이 수정해야 한다.\n",
+    "\n",
+    "# [파일명: tdd_sample.py]\n",
+    "\n",
+    "# import unittest\n",
+    "\n",
+    "\n",
+    "# def leap_year(year):\n",
+    "#     if year == 0:\n",
+    "#         return True\n",
+    "\n",
+    "\n",
+    "# class LeapYearTest(unittest.TestCase):\n",
+    "#     def test_leap_year(self):\n",
+    "#         self.assertTrue(leap_year(0))\n",
+    "\n",
+    "\n",
+    "# if __name__ == '__main__':\n",
+    "#     unittest.main()\n",
+    "# 이렇게 수정하고 테스트를 수행하면 다음과 같은 결과를 볼 수 있다.\n",
+    "\n",
+    "# c:\\projects\\pylib>python tdd_sample.py\n",
+    "# .\n",
+    "# ----------------------------------------------------------------------\n",
+    "# Ran 1 test in 0.000s\n",
+    "\n",
+    "# OK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting tdd_sample.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile tdd_sample.py\n",
+    "import unittest\n",
+    "\n",
+    "def leap_year(year):\n",
+    "    if year == 0:\n",
+    "        return True\n",
+    "\n",
+    "class LeapYearTest(unittest.TestCase):\n",
+    "    def test_leap_year(self):\n",
+    "        self.assertTrue(leap_year(0))\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이는 오류 없이 1개의 테스트를 성공적으로 통과했다는 뜻이다. 하지만, 이쯤 되면 백이면 백 모두 이런 생각을 할 것이다.\n",
+    "\n",
+    "# 0일 때만 True를 반환하다니 테스트 통과에만 급급한 방법 아닌가?\n",
+    "\n",
+    "# 그렇다. 테스트 통과에만 급급한 방법을 찾는 것, 그것 또한 TDD의 당연한 과정이다! 켄트 벡은 테스트를 빠르게 통과하기만 하면 어떤 '죄악'(?)을 저질러도 상관없다고 말한다. 그 이유는 TDD 사이클에 의해 결국에는 당연한 코드로 변경되기 때문이다.\n",
+    "\n",
+    "# 이제 테스트 코드를 다음과 같이 변경해 보자.\n",
+    "\n",
+    "# [파일명: tdd_sample.py]\n",
+    "\n",
+    "# import unittest\n",
+    "\n",
+    "\n",
+    "# def leap_year(year):\n",
+    "#     if year == 0:\n",
+    "#         return True\n",
+    "\n",
+    "\n",
+    "# class LeapYearTest(unittest.TestCase):\n",
+    "#     def test_leap_year(self):\n",
+    "#         self.assertTrue(leap_year(0))\n",
+    "#         self.assertFalse(leap_year(1))\n",
+    "#         self.assertTrue(leap_year(4))\n",
+    "\n",
+    "\n",
+    "# if __name__ == '__main__':\n",
+    "#     unittest.main()\n",
+    "\n",
+    "# 4로 나누어떨어지는 연도가 윤년이라고 알고 있었기에 이와 같은 테스트가 만들어질 수 있었다. 테스트를 수행하면 다음과 같은 결과가 출력된다.\n",
+    "\n",
+    "# c:\\projects\\pylib>python tdd_sample.py\n",
+    "# F\n",
+    "# ======================================================================\n",
+    "# FAIL: test_leap_year (__main__.LeapYearTest)\n",
+    "# ----------------------------------------------------------------------\n",
+    "# Traceback (most recent call last):\n",
+    "#   File \"c:\\projects\\pylib\\tdd_sample.py\", line 17, in test_leap_year\n",
+    "#     self.assertTrue(leap_year(4))\n",
+    "# AssertionError: None is not true\n",
+    "\n",
+    "# ----------------------------------------------------------------------\n",
+    "# Ran 1 test in 0.001s\n",
+    "\n",
+    "# FAILED (failures=1)\n",
+    "# 0일 때만 True이므로 leap_year(1)과 leap_year(4)는 모두 None을 반환한다. 파이썬은 None을 False로 인식하므로 운 좋게도 leap_year(1)은 통과했다. 하지만, leap_year(4)에서 실패하여 오류가 발생했다. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting tdd_sample.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile tdd_sample.py\n",
+    "import unittest\n",
+    "\n",
+    "def leap_year(year):\n",
+    "    if year == 0:\n",
+    "        return True\n",
+    "\n",
+    "class LeapYearTest(unittest.TestCase):\n",
+    "    def test_leap_year(self):\n",
+    "        self.assertTrue(leap_year(0))\n",
+    "        self.assertFalse(leap_year(1))\n",
+    "        self.assertTrue(leap_year(4))\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 테스트를 통과하는 가장 빠른 방법은 다음과 같다.\n",
+    "\n",
+    "# [파일명: tdd_sample.py]\n",
+    "\n",
+    "# import unittest\n",
+    "\n",
+    "\n",
+    "# def leap_year(year):\n",
+    "#     if year == 0:\n",
+    "#         return True\n",
+    "#     elif year == 1:\n",
+    "#         return False\n",
+    "#     elif year == 4:\n",
+    "#         return True\n",
+    "\n",
+    "\n",
+    "# class LeapYearTest(unittest.TestCase):\n",
+    "#     def test_leap_year(self):\n",
+    "#         self.assertTrue(leap_year(0))\n",
+    "#         self.assertFalse(leap_year(1))\n",
+    "#         self.assertTrue(leap_year(4))\n",
+    "\n",
+    "\n",
+    "# if __name__ == '__main__':\n",
+    "#     unittest.main()\n",
+    "\n",
+    "# 하지만, 테스트 코드와 실제 코드를 잘 살펴보면 '데이터의 중복'을 발견할 수 있다. \n",
+    "# 그것은 바로 0, 1, 4라는 숫자이다. 이 숫자를 유심히 관찰하면 다음과 같이 코드를 리팩토링을 할 수 있다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting tdd_sample.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile tdd_sample.py\n",
+    "import unittest\n",
+    "\n",
+    "def leap_year(year):\n",
+    "    if year == 0:\n",
+    "        return True\n",
+    "    elif year == 1:\n",
+    "        return False\n",
+    "    elif year == 4:\n",
+    "        return True\n",
+    "\n",
+    "class LeapYearTest(unittest.TestCase):\n",
+    "    def test_leap_year(self):\n",
+    "        self.assertTrue(leap_year(0))\n",
+    "        self.assertFalse(leap_year(1))\n",
+    "        self.assertTrue(leap_year(4))\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 리팩토링이란 이미 작성한 소스 코드에서 구현된 일련의 행위를 변경 없이 코드의 가독성과 유지보수성을 높이고자 내부 구조를 변경하는 것이다.\n",
+    "\n",
+    "# [파일명: tdd_sample.py]\n",
+    "\n",
+    "# import unittest\n",
+    "\n",
+    "\n",
+    "# def leap_year(year):\n",
+    "#     if year % 4 == 0:\n",
+    "#         return True\n",
+    "#     else:\n",
+    "#         return False\n",
+    "\n",
+    "\n",
+    "# class LeapYearTest(unittest.TestCase):\n",
+    "#     def test_leap_year(self):\n",
+    "#         self.assertTrue(leap_year(0))\n",
+    "#         self.assertFalse(leap_year(1))\n",
+    "#         self.assertTrue(leap_year(4))\n",
+    "\n",
+    "\n",
+    "# if __name__ == '__main__':\n",
+    "#     unittest.main()\n",
+    "\n",
+    "# 4라는 중복 숫자가 남아 있긴 하지만, 이 숫자는 의미가 있는 숫자이므로 일단은 그대로 놔두기로 한다. TDD의 흐름이 지금까지 진행해 온 것처럼 '테스트 → 코드 → 리팩토링'의 순서로 자연스럽게 흘러간다는 점에 주목하자.\n",
+    "\n",
+    "# 테스트를 계속하기 전에 윤년이 무엇인지 개념을 확실히 정리해 두자.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting tdd_sample.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile tdd_sample.py\n",
+    "import unittest\n",
+    "\n",
+    "def leap_year(year):\n",
+    "    if year % 4 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "class LeapYearTest(unittest.TestCase):\n",
+    "    def test_leap_year(self):\n",
+    "        self.assertTrue(leap_year(0))\n",
+    "        self.assertFalse(leap_year(1))\n",
+    "        self.assertTrue(leap_year(4))\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# [윤년의 정의]\n",
+    "\n",
+    "# - 서력 기원 연수가 4로 나누어떨어지는 해는 우선 윤년으로 한다.\n",
+    "# - 그중에서 100으로 나누어떨어지는 해는 평년으로 한다.\n",
+    "# - 다만 400으로 나누어떨어지는 해는 다시 윤년으로 정한다.\n",
+    "\n",
+    "# 요컨대, 1200년은 400으로 나누어떨어지고 100으로도 나누어떨어지지만 400을 먼저 생각하기 때문에 윤년이다. \n",
+    "# 700년은 100으로 나누어떨어지기 때문에 윤년이 아니다. 즉 400, 100, 4라는 우선순위를 적용해야 한다는 점이다. \n",
+    "# 이를 나타날 낼 수 있는 테스트 코드는 다음과 같다.\n",
+    "\n",
+    "# [파일명: tdd_sample.py]\n",
+    "\n",
+    "# import unittest\n",
+    "\n",
+    "\n",
+    "# def leap_year(year):\n",
+    "#     if year % 4 == 0:\n",
+    "#         return True\n",
+    "#     else:\n",
+    "#         return False\n",
+    "\n",
+    "\n",
+    "# class LeapYearTest(unittest.TestCase):\n",
+    "#     def test_leap_year(self):\n",
+    "#         self.assertTrue(leap_year(0))\n",
+    "#         self.assertFalse(leap_year(1))\n",
+    "#         self.assertTrue(leap_year(4))\n",
+    "#         self.assertTrue(leap_year(1200))\n",
+    "#         self.assertFalse(leap_year(700))\n",
+    "\n",
+    "\n",
+    "# if __name__ == '__main__':\n",
+    "#     unittest.main()\n",
+    "\n",
+    "# 이 테스트 코드는 실행 시 self.assertFalse(leap_year(700))에서 실패한다. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting tdd_sample.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile tdd_sample.py\n",
+    "import unittest\n",
+    "\n",
+    "def leap_year(year):\n",
+    "    if year % 4 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "class LeapYearTest(unittest.TestCase):\n",
+    "    def test_leap_year(self):\n",
+    "        self.assertTrue(leap_year(0))\n",
+    "        self.assertFalse(leap_year(1))\n",
+    "        self.assertTrue(leap_year(4))\n",
+    "        self.assertTrue(leap_year(1200))\n",
+    "        self.assertTrue(leap_year(700))\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile tdd_sample.py\n",
+    "import unittest\n",
+    "\n",
+    "def leap_year(year):\n",
+    "    if year % 400 == 0:\n",
+    "        return True\n",
+    "    elif year % 100 == 0:\n",
+    "        return False\n",
+    "    elif year % 4 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "class LeapYearTest(unittest.TestCase):\n",
+    "    def test_leap_year(self):\n",
+    "        self.assertTrue(leap_year(0))\n",
+    "        self.assertFalse(leap_year(1))\n",
+    "        self.assertTrue(leap_year(4))\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 테스트를 통과하려면 다음과 같이 실제 코드를 수정해야만 한다.\n",
+    "\n",
+    "# [파일명: tdd_sample.py]\n",
+    "\n",
+    "# import unittest\n",
+    "\n",
+    "\n",
+    "# def leap_year(year):\n",
+    "#     if year % 400 == 0:\n",
+    "#         return True\n",
+    "#     elif year % 100 == 0:\n",
+    "#         return False\n",
+    "#     elif year % 4 == 0:\n",
+    "#         return True\n",
+    "#     else:\n",
+    "#         return False\n",
+    "\n",
+    "\n",
+    "# class LeapYearTest(unittest.TestCase):\n",
+    "#     def test_leap_year(self):\n",
+    "#         self.assertTrue(leap_year(0))\n",
+    "#         self.assertFalse(leap_year(1))\n",
+    "#         self.assertTrue(leap_year(4))\n",
+    "#         self.assertTrue(leap_year(1200))\n",
+    "#         self.assertFalse(leap_year(700))\n",
+    "\n",
+    "\n",
+    "# if __name__ == '__main__':\n",
+    "#     unittest.main()\n",
+    "# 이로써 윤년 확인 함수 leap_year()를 완성했다. 아직 불안한 마음이 든다면 좀 더 테스트 코드를 보강해야 할 것이다. calendar.isleap() 함수를 알고 있으므로 다음과 같이 1~100000년까지의 결과가 같은지를 테스트하는 코드를 작성하여 근심을 덜어내자.\n",
+    "\n",
+    "# [파일명: tdd_sample.py]\n",
+    "\n",
+    "# import unittest\n",
+    "\n",
+    "\n",
+    "# def leap_year(year):\n",
+    "#     if year % 400 == 0:\n",
+    "#         return True\n",
+    "#     elif year % 100 == 0:\n",
+    "#         return False\n",
+    "#     elif year % 4 == 0:\n",
+    "#         return True\n",
+    "#     else:\n",
+    "#         return False\n",
+    "\n",
+    "\n",
+    "# class LeapYearTest(unittest.TestCase):\n",
+    "#     def test_leap_year(self):\n",
+    "#         self.assertTrue(leap_year(0))\n",
+    "#         self.assertFalse(leap_year(1))\n",
+    "#         self.assertTrue(leap_year(4))\n",
+    "#         self.assertTrue(leap_year(1200))\n",
+    "#         self.assertFalse(leap_year(700))\n",
+    "\n",
+    "#     def test_same_calendar(self):\n",
+    "#         import calendar\n",
+    "#         for year in (1, 100000):\n",
+    "#             self.assertEqual(leap_year(year), calendar.isleap(year))\n",
+    "\n",
+    "\n",
+    "# if __name__ == '__main__':\n",
+    "#     unittest.main()\n",
+    "# 1년부터 100000년까지의 leap_year(year)와 calendar.isleap(year)의 결과가 같은지 비교하고자 새로운 테스트 함수 test_same_calendar()를 작성하고 unittest.TestCase의 assertEqual() 함수를 이용하여 비교하였다. 코드를 수행해 보면 오류 없이 2개의 테스트(test_leap_year(), test_same_calendar())를 잘 통과하는 것을 확인할 수 있다.\n",
+    "\n",
+    "# c:\\projects\\pylib>python tdd_sample.py\n",
+    "# ..\n",
+    "# ----------------------------------------------------------------------\n",
+    "# Ran 2 tests in 0.004s\n",
+    "\n",
+    "# OK\n",
+    "# 이상으로 TDD 기법과 unittest 모듈을 사용하여 든든한 leap_year() 함수를 만들어 보았다.\n",
+    "\n",
+    "# 참고\n",
+    "# unittest - 단위 테스트 프레임워크: https://docs.python.org/ko/3/library/unittest.html"
+   ]
   }
  ],
  "metadata": {
