--- a/Programming/Javascript/[코딩앙마] 자바스크립트 중급 강좌/자바스크립트 중급 강좌.md
+++ b/Programming/Javascript/[코딩앙마] 자바스크립트 중급 강좌/자바스크립트 중급 강좌.md
@@ -1085,9 +1085,372 @@ console.log(user.name);     // 'Mike'
 console.log(user2.name);     // 'Tom'
 ```
 
+## 11. 클로저(Closure)
+- 함수와 렉시컬 환경의 조합
+- 함수가 생성될 당시의 외부 변수를 기억
+- 생성 이후에도 계속 접근 가능
+
+### 어휘적 환경(Lexical Environment) - 자바스크립트는 어휘적 환경을 같는다
+```javascript
+let one;
+one = 1;
+
+function addOne(num) {
+    console.log(one + num);
+}
+addOne(5);
+```
+<img src="./images/11_어휘적환경1.png" width="800px" height="300px" title="어휘적 환경1"></img>   
+
+```javascript
+function makeAdder(x) {
+    return function(y) {
+        return x + y;
+    }
+}
+
+const add3 = makeAddr(3);
+console.log(add3(2));
+```
+
+<img src="./images/11_어휘적환경2.png" width="800px" height="300px" title="어휘적 환경2"></img>   
+
+```javascript
+function makeCounter() {
+    let num = 0;        // 은닉화
+
+    return function() {
+        return num++;
+    };
+}
+
+let counter = makeCounter();
+console.log(counter());     // 0
+console.log(counter());     // 1
+console.log(counter());     // 2
+```
+
+## 12. setTimeout / setInterval
+- setTimeout - 일정 시간이 지난 후 함수를 실행
+- setInterval - 일정 시간 간격으로 함수를 반복
+
+### setTimeout - 일정 시간이 지난 후 함수를 실행
+```javascript
+function fn() {
+    console.log(3);
+}
+setTimeout(fn, 3000);   // (실행할 fn, milliseconds)
+```
+
+```javascript
+setTimeout(function() {console.log(3);}, 3000);   // (실행할 fn, milliseconds)
+```
+
+// function에 인수가 필요한 경우
+```javascript
+function showName(name) {
+    console.log(name);
+}
+
+setTimeout(showName, 3000, 'Mike');
+```
+### setTimeout의 스케쥴 취소
+```javascript
+function showName(name) {
+    console.log(name);
+}
+
+const tId = setTimeout(showName, 3000, 'Mike');
+clearTimeout(tId);
+```
+
+### setTimeout delay=0 ?
+```javascript
+setTimeout(function() {
+    console.log(2);
+}, 0);
+console.log(1);     // 1, 2
+```
+
+### setInterval - 일정 시간 간격으로 함수를 반복 수행
+```javascript
+function showName(name) {
+    console.log(name);
+}
+
+const tId = setInterval(showName, 3000, 'Mike');
+```
+- 반복수행 취소
+```javascript
+function showName(name) {
+    console.log(name);
+}
+
+const tId = setInterval(showName, 3000, 'Mike');
+clearInterval(tId);
+```
 
 
+## 13. call, apply, bind
+- 자바스크립트에서는 함수 호출 방식과 관계없이 this를 지정할 수 있음
+
+### call 메서드
+- 모든 함수에서 사용할 수 있으며, this를 특정값으로 지정할 수 있음
+
+```javascript
+const mike = {
+    name: 'Mike',
+};
+
+const tom = {
+    name: 'Tom',
+};
+
+function showThisName() {
+    console.log(this.name);
+}
+
+showThisName(); // undefined. this 는 Window를 가리키며 Window.name = undefined
+showThisName.call(mike);
+showThisName.call(tom);
 
 
+function update(birthYear, occupation) {
+    this.birthYear = birthYear;
+    this.occupation = occupation;
+};
+
+update.call(mike, 1999, 'singer');
+console.log(mike);
+```
+
+### apply 메서드
+- apply는 함수 매개변수를 처리하는 방법을 제외하면 call과 안전히 같음
+- call은 일반적인 함수와 마찬가지로 매개변수를 직접 받지만, apply는 매개변수를 배열로 받음
+
+```javascript
+const mike = {
+    name: 'Mike',
+};
+
+const tom = {
+    name: 'Tom',
+};
+
+function showThisName() {
+    console.log(this.name);
+}
+
+function update(birthYear, occupation) {
+    this.birthYear = birthYear;
+    this.occupation = occupation;
+};
+
+update.apply(mike, [1999, 'singer']);
+console.log(mike);
+
+update.apply(tom, [2002, 'teacher']);
+console.log(tom);
+```
+
+```javascript
+const minNum = Math.min(3, 10, 1, 6, 4);
+const maxNum = Math.max(3, 10, 1, 6, 4);
+
+console.log(minNum);
+console.log(maxNum);
+
+// Spread 연산자
+nums = [3, 10, 1, 6, 4]
+const minNum1 = Math.min(...nums);
+const maxNum1 = Math.max(...nums);
+
+console.log(minNum1);
+console.log(maxNum1);
+
+// apply
+const minNum2 = Math.min.apply(null, nums);
+const maxNum2 = Math.max.apply(null, nums);
+
+console.log(minNum2);
+console.log(maxNum2);
+
+// call
+const minNum3 = Math.min.apply(null, ...nums);
+const maxNum3 = Math.max.apply(null, ...nums);
+
+console.log(minNum3);
+console.log(maxNum3);
+```
+
+### bind 메서드
+- 함수의 this 값을 영구히 바꿀 수 있음
+
+```javascript
+const mike = {
+    name: 'Mike',
+};
+
+function update(birthYear, occupation) {
+    this.birthYear = birthYear;
+    this.occupation = occupation;
+};
+
+const updateMike = update.bind(mike);
+updateMike(1980, 'police');
+console.log(mike);
+```
+
+```javascript
+const user = {
+    name: 'Mike',
+    showName: function() {
+        console.log(`Hello, ${this.name}`);
+    },
+};
+
+user.showName();
+
+let fn = user.showName;
+fn();
+
+fn.call(user);
+fn.apply(user);
+
+let boundFn = fn.bind(user);
+boundFn();
+```
+
+
+## 14. 상속, prototype
+```javascript
+const user = {
+    name: 'Mike',
+}
+
+console.log(user.name);
+console.log(user.hasOwnProperty('name'));
+console.log(user.hasOwnProperty('age'));
+
+console.log(user);
+
+// prototype 을 알기위해 상속 이용
+const Car = {
+    wheels: 4,
+    drive() {
+        console.log(`drive ... ${this.name}`)
+    },
+};
+
+const bmw = {
+    color: 'red',
+    navigation: 1,
+};
+
+const benz = {
+    color: 'black',
+};
+
+const audi = {
+    color: 'blue',
+};
+
+bmw.__proto__ = Car;
+benz.__proto__ = Car;
+audi.__proto__ = Car;
+
+const x5 = {
+    color: 'white',
+    name: 'x5',
+}
+
+x5.__proto__ = bmw; // prototype chain
+
+benz.drive();
+console.log(x5.name);
+console.log(x5.navigation);
+x5.drive();
+
+console.log('-----------------------------');
+for(p in x5) {
+    console.log(p);
+}
+
+console.log(Object.keys(x5));   // x5에만 있는 key 가 나옴
+console.log(Object.values(x5));
+
+for(p in x5) {
+    if (x5.hasOwnProperty(p)) {
+        console.log('o', p);
+    } else {
+        console.log('x', p);
+    }
+}
+```
+
+```javascript
+// const car = {
+//     wheels = 4,
+//     drive() {
+//         console.log('drive...');        
+//     },
+// };
+
+const Bmw = function(color) {
+    this.color = color;
+};
+
+Bmw.prototype.wheels = 4;
+Bmw.prototype.drive = function () {
+    console.log('drive...');        
+};
+
+const x6 = new Bmw('red');
+const z6 = new Bmw('blue');
+
+// x6.__proto__ = car;
+// z6.__proto__ = car;
+```
+console.log(x5);
+console.log(z4);
+
+
+### 생성자 이용
+```javascript
+const Bmw1 = function(color) {
+    this.color = color;
+};
+
+Bmw1.prototype.wheels = 4;
+Bmw1.prototype.drive = function () {
+    console.log('drive...');        
+};
+Bmw1.prototype.navigation = 1;
+Bmw1.prototype.stop = function () {
+    console.log('stop...');            
+};
+
+const x6 = new Bmw1('red');
+const z6 = new Bmw1('blue');
+
+// x6.__proto__ = car;
+// z6.__proto__ = car;
+
+console.log(x6);
+console.log(z6);
+
+console.log(x6.color);
+console.log(x6.navigation);
+
+x6.drive();
+x6.stop();
+
+
+// instanceof 메서드
+console.log(x6 instanceof Bmw1);
+
+// constructor 메서드
+console.log(x6.constructor === Bmw1);
+```
 
 
